added button for theme toggler

--- a/public/redirect/redirect.html
+++ b/public/redirect/redirect.html
@@ -21,8 +21,8 @@
       </div>
     </div>
     <br />
-    <div class="login-page">
-      <div class="form">The Meeting has ended successfully! &#128512</div>
+    <div class="message-box">
+      <div class="message">The Meeting has ended successfully! &#128512</div>
     </div>
   </body>
 </html>
