Detailing in UI

--- a/public/redirect/redirect.html
+++ b/public/redirect/redirect.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="redirect.css" />
     <title>Redirect</title>
-    <link rel="icon" href="img/1.png" type="image/icon type">
+    <link rel="icon" href="img/logo.png" type="image/icon type">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,13 +16,13 @@
     <div class="header">
       <div class="inner-header">
         <div class="logo">
-     <!--  <i class="fa fa-github"></i> -->
-      <a href="https://github.com/anushkajain6459" target="_blank"> Anushka's Microsoft Teams </a></div>
+        <!-- GitHub Repo Link -->
+      <a href="https://github.com/anushkajain6459/MS-Teams-Clone" target="_blank"> Anushka's Microsoft Teams &#10024 </a></div>
       </div>
     </div>
     <br />
     <div class="message-box">
-      <div class="message">The Meeting has ended successfully! &#128512</div>
+      <div class="message">The Meeting has ended successfully! &#128512 ✌</div>
     </div>
   </body>
 </html>
