--- a/public/Landing-page/landing-page.html
+++ b/public/Landing-page/landing-page.html
@@ -42,7 +42,7 @@
         <div class="search-icon"><i class="fa fa-th"></i></div>
         <div class="social-icons">
           <a
-            href="https://www.linkedin.com/in/anushka-jain-9508a91a1/"
+            href="https://www.linkedin.com/company/microsoft/mycompany/verification/"
             target="_blank"
           >
             <i class="fa fa-linkedin"></i>
@@ -50,10 +50,10 @@
           <a href="https://github.com/anushkajain6459" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://twitter.com/Anushkajain6459" target="_blank">
+          <a href="https://twitter.com/Microsoft" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
-          <a href="https://www.instagram.com/nushka.jain/" target="_blank">
+          <a href="https://www.instagram.com/microsoft/" target="_blank">
             <i class="fa fa-instagram"></i>
           </a>
         </div>
